[tool.poetry]
name = "devika"
version = "0.1.0"
description = "forked from stitionai/devika"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"
flask-cors = "^4.0.0"
toml = "^0.10.2"
urllib3 = "1.26.15"
requests = "^2.31.0"
colorama = "^0.4.6"
fastlogging = "^1.0.0"
jinja2 = "^3.1.3"
mistletoe = "^1.3.0"
markdownify = "^0.11.6"
pdfminer-six = "^20231228"
playwright = "^1.42.0"
pytest-playwright = "^0.4.4"
tiktoken = "^0.6.0"
ollama = "^0.1.7"
openai = "^1.14.2"
anthropic = "^0.21.3"
sqlmodel = "^0.0.16"
keybert = "^0.8.4"
gitpython = "^3.1.42"
netlify-py = "^0.1.0"
markdown = "^3.6"
xhtml2pdf = "^0.2.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
